// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fixed renders default component 1`] = `
.c0 {
  position: fixed;
  z-index: 100;
}

<div
  className="c0"
/>
`;

exports[`Fixed renders positioned component 1`] = `
.c0 {
  position: fixed;
  top: 10;
  left: 10;
  right: 10;
  bottom: 10;
  z-index: 100;
}

<div
  className="c0"
/>
`;
